test_regress/t/t_interface_mismodport_bad.out
%Error: t/t_interface_mismodport_bad.v:32:12: Can't find definition of 'bad' in dotted variable/method: 'isub.bad'
   32 |       isub.bad = i_value;   
      |            ^~~
        ... Known scopes under 'isub': <no instances found>
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
